syntax = "proto3";
option java_multiple_files = true;
package io.github.bfeng.simplemapred.workflow;

message RunReducerRequest {
    string outputFile = 1;
    string reduceClass = 2;
}

message RunReducerResponse {
    int32 status = 1;
}

message StopLocalReducerRequest {
    int32 reducerId = 1;
}

message StopLocalReducerResponse {
    int32 status = 1;
}

service ReducerService {
    rpc runReducer (RunReducerRequest) returns (RunReducerResponse);
    rpc stopReducer (StopLocalReducerRequest) returns (StopLocalReducerResponse);
}